non-root-users/non-complaint-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: root-pod-1
  labels:
    team_id: nginx
    app: root-container
spec:
  containers:
    - name: nginx
      image: nginx
      securityContext:
        runAsUser: 0
        allowPrivilegeEscalation: true
